# trabalholaerte

./: .gitignore  README.md  SETUP.md
backend/: .env.example  manage.py  pyproject.toml
backend/config/: routers.py  settings.py  urls.py
backend/controle_aluno/: models.py  views.py
backend/controle_aluno/migrations/: 0001_initial.py
backend/controle_biblioteca/: apps.py  models.py  views.py
backend/controle_biblioteca/migrations/: 0001_initial.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: alunos.ts  categorias.ts  client.ts  emprestimos.ts  livros.ts  notas.ts
frontend/src/components/: CrudPage.tsx  Layout.tsx
frontend/src/config/: api.ts
frontend/src/pages/: AlunosPage.tsx  CategoriasPage.tsx  EmprestimosPage.tsx  LivrosPage.tsx  NotasPage.tsx
frontend/src/types/: index.ts
