[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-ninja-extra>=0.31.4",
    "mysqlclient>=2.2.8",
    "ninja>=1.13.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
